--- a/css/quizzes_manager.css
+++ b/css/quizzes_manager.css
@@ -25,3 +25,16 @@ main {
   border-color: #0d6efd;
   color: #fff;
 }
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('../assets/fonts/MyFont.woff2') format('woff2'),
+  url('../assets/fonts/MyFont.woff') format('woff'),
+  url('../assets/fonts/MyFont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+.navbar-brand {
+  font-family: 'MyFont', sans-serif;
+  font-weight: bold;
+}
